// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ChannelHeaderDropdown/MenuItem.CloseMessage should match snapshot for DM Channel 1`] = `
<MenuItemAction
  onClick={[Function]}
  show={true}
  text={
    Object {
      "defaultMessage": "Close Direct Message",
      "id": "center_panel.direct.closeDirectMessage",
    }
  }
/>
`;

exports[`components/ChannelHeaderDropdown/MenuItem.CloseMessage should match snapshot for GM Channel 1`] = `
<MenuItemAction
  onClick={[Function]}
  show={true}
  text={
    Object {
      "defaultMessage": "Close Group Message",
      "id": "center_panel.direct.closeGroupMessage",
    }
  }
/>
`;
